RESOLVED FIXED205515
REGRESSION (r253807): crash in storage/indexeddb/modern/opendatabase-request-private.html
https://bugs.webkit.org/show_bug.cgi?id=205515
Summary REGRESSION (r253807): crash in storage/indexeddb/modern/opendatabase-request-...
Sihui Liu
Reported 2019-12-20 12:53:12 PST
ASSERTION FAILED: !m_currentlyCompletingRequest ./Modules/indexeddb/IDBTransaction.cpp(1470) : void WebCore::IDBTransaction::autoCommit() 1 0x10f5e9869 WTFCrash 2 0x11e927d0b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x12008f60f WebCore::IDBTransaction::autoCommit() 4 0x120085313 WebCore::IDBTransaction::removeRequest(WebCore::IDBRequest&) 5 0x1200851fb WebCore::IDBOpenDBRequest::cancelForStop() 6 0x120088e90 WebCore::IDBRequest::stop() 7 0x120e2a6a5 auto WebCore::ScriptExecutionContext::stopActiveDOMObjects()::$_7::operator()<WebCore::ActiveDOMObject>(WebCore::ActiveDOMObject&) const 8 0x120e2a654 WTF::Detail::CallableWrapper<WebCore::ScriptExecutionContext::stopActiveDOMObjects()::$_7, WebCore::ScriptExecutionContext::ShouldContinue, WebCore::ActiveDOMObject&>::call(WebCore::ActiveDOMObject&) 9 0x120e10d80 WTF::Function<WebCore::ScriptExecutionContext::ShouldContinue (WebCore::ActiveDOMObject&)>::operator()(WebCore::ActiveDOMObject&) const 10 0x120e10bbf WebCore::ScriptExecutionContext::forEachActiveDOMObject(WTF::Function<WebCore::ScriptExecutionContext::ShouldContinue (WebCore::ActiveDOMObject&)> const&) const 11 0x120e10fd4 WebCore::ScriptExecutionContext::stopActiveDOMObjects() 12 0x120c37bfb WebCore::Document::stopActiveDOMObjects() 13 0x120c3797c WebCore::Document::commonTeardown() 14 0x120c45db9 WebCore::Document::prepareForDestruction()
Attachments
Patch (2.89 KB, patch)
2019-12-20 13:00 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-12-20 13:00:14 PST
Radar WebKit Bug Importer
Comment 2 2019-12-20 16:28:38 PST
WebKit Commit Bot
Comment 3 2019-12-20 17:49:12 PST
Comment on attachment 386243 [details] Patch Clearing flags on attachment: 386243 Committed r253858: <https://trac.webkit.org/changeset/253858>
WebKit Commit Bot
Comment 4 2019-12-20 17:49:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.